fixed package file syntax & added dev dependencies

--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name"          : "Express will stop",
+  "name"          : "express-will-stop",
   "description"   : "A light middleware that handles SIGTERM, refuses new requests and optionally exits the process when there are no more active requests",
   "url"           : "https://github.com/mihs/express_will_stop",
   "author"        : "Mihnea Scafes <mihnea@nagemus.com>",
   "contributors"  : [],
+  "version"       : "0.1.0",
   "dependencies"  : {
-    "debug": "0.7.x",
+    "debug": "0.7.x"
   },
-  "devDependencies" : {},
+  "devDependencies" : {
+    "coffee-script": "1.6.x"
+  },
   "engines": { 
     "node": "0.8.x",
     "npm":  "1.2.x"
   },
-  "lib"           : ".",
   "main"          : "lib/express_will_stop.js",
-  "version"       : "0.1.0"
 }
