fixed syntax of package file

--- a/package.json
+++ b/package.json
@@ -15,5 +15,5 @@
     "node": "0.8.x",
     "npm":  "1.2.x"
   },
-  "main"          : "lib/express_will_stop.js",
+  "main": "lib/express_will_stop.js"
 }
